# pysilk

./: .gitignore  .gitmodules  CMakeLists.txt  MANIFEST.in  README.markdown  changename.py  move.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build_wheel_ci.yml  build_whl.yml  unitest.yml  upload.yml  upload_wheel_ci.yml
_skbuild/win-amd64-3.8/cmake-build/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeSpec.json  build.ninja  cmake_install.cmake  install_manifest.txt
_skbuild/win-amd64-3.8/cmake-build/CMakeTmp/link_flags/gnu_ld_ignore/MODULE/SHARED/src/: CMakeLists.txt
_skbuild/win-amd64-3.8/cmake-build/CMakeTmp/link_flags/no_flag/MODULE/SHARED/src/: CMakeLists.txt  counter.c  counter.h
_skbuild/win-amd64-3.8/cmake-build/CMakeTmp/link_flags/osx_dynamic_lookup/MODULE/SHARED/src/: CMakeLists.txt  main.c  number.c  number.h
_skbuild/win-amd64-3.8/cmake-build/silk/: cmake_install.cmake  transcoder.c  transcoder.exp
pysilk/: __init__.py  _silk.c  _silk.pyi  _silk.pyx  silk.pxd
pysilk/backends/: __init__.py
pysilk/backends/cffi/: __init__.py  build.py
pysilk/backends/cython/: __init__.py  _silk.c  _silk.pyi  _silk.pyx  _silk_cy.c  _silk_cy.pyx  silk.pxd
silk/: CMakeLists.txt  Decoder.pxd  __init__.py  api.pxd  bytebuffer.pxd  control.pxd  errors.pxd  lowlevelapi.c  lowlevelapi.pyx  structs.pxd  transcoder.c  transcoder.pyx  typedef.pxd
silk/bytebuffer/: bytebuffer.c  bytebuffer.h
silk/src/: Encoder.c.temp  Encoder.h
src/: Decoder.c  Decoder.h  SKP_Silk_dec_API.c
test/: Decoder.c  Encoder.c  guajibao.py  header.py  input.pcm  output.silk  signalCompare.c  test_encode.py  test_speed.py
